# 2to5th2015

./: .gitignore  README.md
ckid-schwartz-gfr/: README.md  ckid-schwartz-gfr.cabal
ckid-schwartz-gfr/src/: GFR.hs
dna-utils/: README.md  dna-utils.cabal
dna-utils/src/: DNA.hs
fluid-maintenance/: README.md  fluid-maintenance.cabal
fluid-maintenance/src/: Main.hs
simple-gloss/: README.md  simple-gloss.cabal  stack.yaml
simple-gloss/src/: Main.hs
tzworld-snap/: stack.yaml
tzworld-snap/src/: Main.hs
