name:                ckid-schwartz-gfr
version:             0.1.0.0
synopsis:            Function for calculating the Glomerular filtration rate by the CKiD Schwartz method
description:         Please see README.md
homepage:            http://github.com/danplubell/2to5th2015/CKiD-Schwartz-GFR#readme
license:             BSD3
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2010 Dan Plubell
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:      GFR
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
