name:                simple-gloss
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
license:             BSD3
author:              Dan Plubell
maintainer:          danplubell@gmail.com
copyright:           2015 Dan Plubell
category:            Other
build-type:          Simple
cabal-version:       >=1.10

executable simple-gloss
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , bmp
                     